Implementacion sin tests de los colaboradores con persona como atributo